# chunking

./: .gitignore  BENCHMARKING.md  CHANGELOG.md  CONFIGURATION_GUIDE.md  CUSTOM_ALGORITHMS_GUIDE.md  DEBUGGING_GUIDE.md  LICENSE  Makefile  README.md  conftest.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
chunking_strategy/: __init__.py  __main__.py  benchmarking.py  cli.py  enhanced_orchestrator.py  logging_config.py  orchestrator.py
chunking_strategy/core/: __init__.py  adaptive.py  base.py  batch.py  custom_algorithm_loader.py  custom_config_integration.py  custom_validation.py  embeddings.py  extractors.py  hardware.py  metrics.py  multi_strategy.py  pipeline.py  production_benchmark.py  registry.py  streaming.py  tika_integration.py  universal_auto_registration.py  universal_framework.py  universal_implementations.py
chunking_strategy/detectors/: __init__.py  content_analyzer.py  encoding_detector.py  file_type_detector.py  language_detector.py
chunking_strategy/strategies/: __init__.py
chunking_strategy/utils/: __init__.py  benchmarking.py  postprocessing.py  preprocessing.py  validation.py
config/: huggingface_token.py.template
config_examples/: CONFIGURATION_GUIDE.md  test_all_configs.py  test_single_config.py
config_examples/advanced_configs/: auto_strategy_test.yaml  parallel_algorithm_testing.yaml  parallel_comparison_simple.yaml
config_examples/basic_configs/: auto_selection.yaml  basic_example.yaml  enhanced_auto_strategy.yaml  essential_text_processing.yaml  semantic_analysis.yaml
config_examples/benchmarking_configs/: README.md  benchmark_config.yaml
config_examples/custom_algorithms/: 01_custom_only.yaml  02_builtin_only.yaml  03_mixed_custom_builtin.yaml  custom_config_example.yaml  custom_loaded_builtin_used.yaml
config_examples/format_specific_configs/: code_focused_config.yaml  css_responsive.yaml  csv_focused_config.yaml  csv_logical_grouping.yaml  csv_memory_optimized.yaml  csv_with_overlap.yaml  doc_content_size.yaml  doc_paragraphs.yaml  doc_sections.yaml  document_first_config.yaml  enhanced_pdf_processing.yaml  enhanced_pdf_simple.yaml  file_extension_routing.yaml  file_extension_simple.yaml  go_functions.yaml  html_attribute_based.yaml  html_tag_based.yaml  java_enterprise.yaml  javascript_functions.yaml  json_array_processing.yaml  json_depth_limited.yaml  json_key_grouping.yaml  json_object_focused.yaml  json_size_optimized.yaml  markdown_content_blocks.yaml  markdown_granular.yaml  markdown_header_focused.yaml  markdown_sections.yaml  pdf_multimodal.yaml  react_components.yaml  xml_hierarchy.yaml  xml_semantic.yaml
config_examples/strategy_configs/: adaptive_learning.yaml  adaptive_production.yaml  boundary_aware_chunker.yaml  buzhash_performance.yaml  context_enriched_chunker.yaml  context_enriched_fast.yaml  context_enriched_semantic.yaml  discourse_aware_default.yaml  embedding_based_chunker.yaml  fastcdc_backup.yaml  fastcdc_deduplication.yaml  fixed_length_word_chunker.yaml  gear_cdc_default.yaml  ml_cdc_hierarchical.yaml  overlapping_window_chunker.yaml  rabin_fingerprinting_default.yaml  recursive_chunker.yaml  rolling_hash_default.yaml  semantic_chunker.yaml  token_based_chunker.yaml  tttd_balanced.yaml
config_examples/use_case_configs/: audio_time_based.yaml  embedding_optimized.yaml  enhanced_directory_processing.yaml  enhanced_streaming.yaml  grid_based_image.yaml  large_files_streaming.yaml  multimodal_embeddings.yaml  patch_based_image.yaml  rag_system.yaml  scene_based_video.yaml  silence_based_audio.yaml  streaming_jsonl.yaml  time_based_audio.yaml  video_time_based.yaml
examples/: 01_basic_usage.py  02_advanced_usage.py  03_embedding_workflows.py  04_cli_examples.py  05_embeddings_integration_demo.py  06_streaming_benefits_demo.py  07_metrics_collection_demo.py  08_extensibility_demo.py  09_universal_framework_demo.py  10_enhanced_streaming_demo.py  11_streaming_and_tika_demo.py  12_parallelization_demo.py  13_smart_parallelization_demo.py  14_python_all_strategies_demo.py  15_comprehensive_directory_processing_demo.py  16_verify_embedding_setup.py  17_benchmark_demo.py  18_langchain_integration_demo.py  19_streamlit_app_demo.py  20_using_integration_helpers.py  21_metrics_and_performance_demo.py  22_adaptive_chunking_learning_demo.py  README.md  integration_helpers.py
examples/custom_algorithms/: README.md  balanced_length_chunker.py  regex_pattern_chunker.py  sentiment_based_chunker.py
test_data/: blog_post.html  books_catalog.xml  business_report.txt  complex_data.csv  config_example.xml  difficult_punctuation.txt  headers_only.csv  invalid.json  large_array.json  large_dataset.csv  large_document_1mb.txt  large_document_2mb.txt  large_document_3mb.txt  meeting_notes.rtf  mixed_content_doc.md  ml_fundamentals.md  multi_section.csv  narrative_doc.txt  nested_structure.json  nested_structure.md  products_by_category.json  sales_by_region.csv  sample.jsonl  sample_adaptive_data.json  sample_article.txt  sample_code.cpp  sample_code.go  sample_code.js  sample_code.py  sample_entity_narrative.txt  sample_go.go  sample_java.java  sample_mixed_content.txt  sample_mixed_strategies.txt  sample_modern_js.js  sample_react.jsx  sample_semantic_text.txt  sample_simple_text.txt  sample_styles.css  sample_styles.scss  (+15 more)
test_data/large_files/: README.md
test_env/: pyvenv.cfg
tests/: __init__.py  conftest.py
tests/core/: test_production_benchmark.py
tests/integration/: conftest.py  test_all_example_configs.py  test_comprehensive_integration.py  test_custom_algorithms_framework.py  test_directory_integration.py  test_directory_processing.py  test_enhanced_streaming.py  test_file_extension_routing.py  test_integration.py  test_new_example_configs.py  test_streaming_integration.py  test_universal_framework.py
tests/performance/: conftest.py  test_advanced_features.py  test_edge_cases_and_performance.py  test_hardware_parallelization.py  test_parallel_algorithm_comparison.py  test_parallelization_performance.py  test_smart_parallelization.py
tests/unit/: conftest.py
(+103 files in other folders)
